// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VerticalAxis /> does not render ticks when \`props.data\` is [] 1`] = `
<div
  class="sc-bdVaJa sc-bwzfXH gkdRtA"
  data-testid="VerticalAxis"
/>
`;

exports[`<VerticalAxis /> renders without crashing 1`] = `
<div
  class="sc-bdVaJa sc-bwzfXH gkdRtA"
  data-testid="VerticalAxis"
>
  <div
    class="sc-bdVaJa sc-htpNat dLMfcP"
  >
    $999
  </div>
  <div
    class="sc-bdVaJa sc-htpNat dLMfcP"
  >
    $1
  </div>
</div>
`;
